tests/aster/x/haskell/two-sum.out

/workspace/mochi/tests/aster/x/haskell/two-sum.hs:10:40: error:
    parse error on input ‘..’
   |
10 |                 return ([i, j])) i + 1 .. (n - 1)) 0 .. (n - 1)
   |                                        ^^
